@@ -1,14 +1,16 @@
-# $NetBSD: Makefile,v 1.3 2018/07/28 14:40:45 brook Exp $
+# $NetBSD: Makefile,v 1.4 2019/07/31 16:19:01 brook Exp $
 
-CATEGORIES=	mail
+CATEGORIES=	mail R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/mime/
 COMMENT=	Map filenames to MIME types
-# TODO: LICENSE=	GPL
+LICENSE=	gnu-gpl-v1 OR gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	mime
-R_PKGVER=	0.4
+R_PKGVER=	0.7
+
+USE_LANGUAGES=	c
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
