@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3151 2019/07/31 16:15:36 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3152 2019/07/31 16:19:01 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5108,3 +5108,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated graphics/R-munsell to 0.5.0 [brook 2019-07-31]
 	Updated graphics/R-scales to 1.0.0 [brook 2019-07-31]
 	Updated lang/R-codetools to 0.2.16 [brook 2019-07-31]
+	Updated mail/R-mime to 0.7 [brook 2019-07-31]
